# Calculator_core

./: CMakeLists.txt  README.md  main.cpp
include/: calc_core.hpp
src/: calc_core.cpp  main.cpp
